<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Text1"
        android:text="@string/textView1"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Switch1"
        android:text="@string/switch1"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Text2"
        android:visibility="invisible" />
    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/RadioGroup1"
        android:visibility="invisible" >

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/RadioJelly"
            android:text="@string/radio1"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/RadioKitkat"
            android:text="@string/radio2"/>
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/RadioLollipop"
            android:text="@string/radio3"/>

    </RadioGroup>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ImgAndroid"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Btn1"
        android:text="@string/btn1"
        android:visibility="invisible" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Btn2"
        android:text="@string/btn2"
        android:visibility="invisible" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn3"
        android:text="aa"/>

</LinearLayout>
